First version deployment.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,239 @@
-<h1>Show House App</h1>
+﻿<!DOCTYPE HTML>
+<!--
+    Show House App website
+-->
+<html>
+
+<head>
+    <title>Show House App</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css" />
+
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
+
+<body>
+
+    <!-- Header -->
+    <header>
+        <div class="header-content">
+            <h1>Show House App</h1>
+            <p>From <strong>blueprints</strong> directly to your clients’ <strong>pockets</strong>!</p>
+        </div>
+        <video class="" playsinline muted autoplay loop preload="auto">
+            <!-- <source src="https://www.shakr.com/static/fold-video-h265-68213d44c6d8f537233a8536b67c3694.mp4" type="video/mp4; codecs=hevc"> -->
+            <!-- <source src="https://www.shakr.com/static/fold-video-vp9-673c4c58a9109989a39a97ea802176d2.webm" type="video/webm; codecs=vp9,opus"> -->
+            <source src="assets/videos/Navigating.mp4" type="video/mp4">
+        </video>
+    </header>
+    <!-- Intro -->
+    <main>
+        <div class="wrapper">
+            <div class="intro">
+                <img src="assets/images/visarch/HeroImage.png" alt="Show House App running on multiple devices" />
+
+                <p>A virtual <strong>show house</strong> in an app! Make your building or flat into an app from your
+                    <strong>BIM</strong> files or <strong>blueprints</strong>, and let your clients and partners explore
+                    it like if they were visiting it.</p>
+                <p>Available on mobile platforms, desktop and the web!</p>
+            </div>
+        </div>
+
+        <h2>Features</h2>
+
+        <div class="wrapper">
+            <div class="section">
+                <div class="section-text">
+                    <h3>Model</h3>
+                    <p>Explore a model of the building to study the distribution. Rotate, pan, and zoom, plus
+                        deconstruct the building like a Lego to understand volumes.</p>
+                </div>
+                <div class="section-image">
+                    <video class="" playsinline muted autoplay loop preload="auto">
+                        <source src="assets/videos/Model.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="section">
+                <div class="section-text">
+                    <h3>3D Explore</h3>
+                    <p>Get inside the building and go for a virtual walk. You can move and look around freely using
+                        touch controls or mouse and keyboard.</p>
+                    <p>If your device has a Gyroscope (i.e.: a mobile phone), you can use it to look around by hovering
+                        it in front of your eyes. A virtual reality device that everyone already carry in their pockets!
+                    </p>
+                </div>
+                <div class="section-image">
+                    <video class="" playsinline muted autoplay loop preload="auto">
+                        <source src="assets/videos/Navigating.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="section">
+                <div class="section-text">
+                    <h3>Dynamic design</h3>
+
+                    <p>Change the materials of any kind of surfaces, open and close doors, change furnitures… Enhance
+                        the
+                        imagination of your visitors!
+                    </p>
+                </div>
+                <div class="section-image">
+                    <video class="" playsinline muted autoplay loop preload="auto">
+                        <source src="assets/videos/Materials.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+            <div class="section section--multiple-image">
+                <div class="multiple-image">
+                    <div class="section-text">
+                        <h3>Realistic lightning, any time of year</h3>
+                        <p>How does the light incide on that window on summer? How long are shadows in winter? You can set
+                            the date and time to emulate realistic lighting conditions, and even change the speed of time.
+                        </p>
+                    </div>
+                    <div class="section-image">
+                        <div class="section-image__image-container">
+                            <video class="" playsinline muted autoplay loop preload="auto">
+                                <source src="assets/videos/DateTime.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="section-image__image-container">
+                            <video class="" playsinline muted autoplay loop preload="auto">
+                                <source src="assets/videos/Cycle.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section multiple-image__extra-content">
+                <div class="section-text">
+                    <p>Thanks to dynamic and realistic lighting technologies, you can turn lights on and off. Realtime
+                        reflections on windows and water surfaces and weather control add an excelent layer of realism.
+                    </p>
+                </div>
+                <div class="section-image">
+                    <video class="" playsinline muted autoplay loop preload="auto">
+                        <source src="assets/videos/Lights.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+
+            <div class="section">
+                <div class="section-text">
+                    <h3>Explore blueprints</h3>
+                    <p>Bring your blueprints with you anywhere. You can choose between multiple floor plans, zoom and
+                        pan to explore them without needing a printed copy.</p>
+                </div>
+                <div class="section-image">
+                    <img src="assets/images/visarch/Plans.png" alt="Blueprints" />
+                </div>
+            </div>
+
+
+            <div class="section">
+                <div class="section-text">
+                    <h3>Photo gallery</h3>
+                    <p>Show the best shots and info of your building with the included photo gallery.</p>
+                </div>
+                <div class="section-image">
+                    <img src="assets/images/visarch/Gallery.jpg" alt="Photo gallery" />
+                </div>
+            </div>
+        </div>
+        <!--Downloads-->
+        <a id="Downloads">
+            <h2>Downloads</h2>
+        </a>
+        <div class="wrapper">
+            <div class="section">
+                <div class="section-text">
+                    <h3>Cliff House</h3>
+                    <p>A three-bedroom, two-stories villa at the top of a cliff. </p>
+                    <p>Fictionally situated in South Spain, this villa is a fully furnished house with plenty of
+                        interactive elements and finish configurations, awaiting your virtual visit!.</p>
+                    <p>Download this app to experience all the features that we can incorporate on a custom <strong>Show
+                            House App</strong></p>
+                    <p><strong>Download links comming soon.</strong></p>
+                </div>
+                <div class="section-image">
+                    <img src="assets/images/visarch/Cliff-House-Mobile.png" alt="Cliff House demo app" />
+                </div>
+            </div>
+
+            <div class="section section--downloads">
+                <div class="section-text">
+                    <h3>Demo building</h3>
+                    <p>Download the demo app for Windows, Android, and Mac.</p>
+                    <p>The demo app features a simple multi-store building, showing off many of the features available
+                        in a lightweight package.</p>
+                    <ul class="actions actions--desktop">
+                        <li>
+                            <a href='https://www.microsoft.com/store/apps/9PGFHVLF92WC?ocid=badge' target="_blank">
+                                <img alt='Get it from Microsoft'
+                                    src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png' />
+                            </a>
+                        </li>
+                        <li>
+                            <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.VisArq&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
+                                target="_blank">
+                                <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
+                            </a>
+                        </li>
+                        <li>
+                            <a href='https://www.dropbox.com/s/v9z64g1welsro9g/Vis%20Arch.app.zip?dl=1' target="_blank">
+                                <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="section-image">
+                    <p>
+                        <video class="" playsinline muted autoplay loop preload="auto">
+                            <source src="assets/videos/Model.mp4" type="video/mp4">
+                        </video>
+                    </p>
+                </div>
+                <ul class="actions actions--mobile">
+                    <li>
+                        <a href='https://www.microsoft.com/store/apps/9PGFHVLF92WC?ocid=badge' target="_blank">
+                            <img alt='Get it from Microsoft'
+                                src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png' />
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.VisArq&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
+                            target="_blank">
+                            <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://www.dropbox.com/s/v9z64g1welsro9g/Vis%20Arch.app.zip?dl=1' target="_blank">
+                            <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </main>
+    <!--Footer-->
+    <footer>
+        <div class="wrapper">
+            <h3>Contact us</h3>
+            <p>Every building, home and construction project is different. <br> Reach us so we can discuss your needs and
+                tailor the app that suits you best!</p>
+            <p><a href="mailto:info@showhouseapp.com"><i class="far fa-envelope"></i> info@showhouseapp.com</a></p>
+        </div>
+
+    </footer>
+
+</body>
+
+</html>
