Añadidos los enlaces de descarga para Mac de Cliff House y corregida alguna falta de ortografía.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="section section--multiple-image">
                 <div class="multiple-image">
                     <div class="section-text">
-                        <h3>Realistic lightning, any time of year</h3>
+                        <h3>Realistic lightning, any time of the year</h3>
                         <p>How does the light incide on that window on summer? How long are shadows in winter? You can set
                             the date and time to emulate realistic lighting conditions, and even change the speed of time.
                         </p>
@@ -152,6 +152,7 @@
             <h2>Downloads</h2>
         </a>
         <div class="wrapper">
+            <!--Cliff House-->
             <div class="section">
                 <div class="section-text">
                     <h3>Cliff House</h3>
@@ -160,13 +161,28 @@
                         interactive elements and finish configurations, awaiting your virtual visit!.</p>
                     <p>Download this app to experience all the features that we can incorporate on a custom <strong>Show
                             House App</strong></p>
-                    <p><strong>Download links comming soon.</strong></p>
+                    <p><strong>Apps for Windows and Android coming soon.</strong></p>
+                    <ul class="actions actions--desktop">
+                        <li>
+                            <a href='https://www.dropbox.com/s/8cyw3eiibvqnm4z/Cliff%20House%200.3.app.zip?dl=1'>
+                                <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="section-image">
                     <img src="assets/images/visarch/Cliff-House-Mobile.png" alt="Cliff House demo app" />
                 </div>
+                <ul class="actions actions--mobile">
+                    <li>
+                        <a href='https://www.dropbox.com/s/8cyw3eiibvqnm4z/Cliff%20House%200.3.app.zip?dl=1' >
+                            <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
+                        </a>
+                    </li>
+                </ul>
             </div>
 
+            <!--Vis Arch-->
             <div class="section section--downloads">
                 <div class="section-text">
                     <h3>Demo building</h3>
@@ -183,12 +199,12 @@
                         <li>
                             <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.VisArq&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
                                 target="_blank">
-                                <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
+                                <img alt='Get it on Google Play' src='./assets/images/google-play.png'/>
                             </a>
                         </li>
                         <li>
-                            <a href='https://www.dropbox.com/s/v9z64g1welsro9g/Vis%20Arch.app.zip?dl=1' target="_blank">
-                                <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
+                            <a href='https://www.dropbox.com/s/v9z64g1welsro9g/Vis%20Arch.app.zip?dl=1'>
+                                <img alt='Download for Mac OS X' src='./assets/images/macBtn.png'/>
                             </a>
                         </li>
                     </ul>
@@ -210,11 +226,11 @@
                     <li>
                         <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.VisArq&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
                             target="_blank">
-                            <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
+                            <img alt='Get it on Google Play' src='./assets/images/google-play.png'/>
                         </a>
                     </li>
                     <li>
-                        <a href='https://www.dropbox.com/s/v9z64g1welsro9g/Vis%20Arch.app.zip?dl=1' target="_blank">
+                        <a href='https://www.dropbox.com/s/v9z64g1welsro9g/Vis%20Arch.app.zip?dl=1'>
                             <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
                         </a>
                     </li>
