Added download link from MS Store for Cliff House. New download link for Mac version.

--- a/index.html
+++ b/index.html
@@ -162,10 +162,16 @@
                         interactive elements and finish configurations, awaiting your virtual visit!.</p>
                     <p>Download this app to experience all the features that we can incorporate on a custom <strong>Show
                             House App</strong></p>
-                    <p><strong>Apps for Windows and Android coming soon.</strong></p>
+                    <p><strong>Android app coming soon.</strong></p>
                     <ul class="actions actions--desktop">
                         <li>
-                            <a href='https://www.dropbox.com/s/8cyw3eiibvqnm4z/Cliff%20House%200.3.app.zip?dl=1'>
+                            <a href='https://www.microsoft.com/store/apps/9P2FR13HXLWS?ocid=badge' target="_blank">
+                                <img alt='Get it from Microsoft'
+                                    src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png' />
+                            </a>
+                        </li>                        
+                        <li>
+                            <a href='https://www.dropbox.com/s/2kas64yutzv9lgd/Cliff%20House%201.0.zip?dl=1'>
                                 <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
                             </a>
                         </li>
@@ -176,7 +182,13 @@
                 </div>
                 <ul class="actions actions--mobile">
                     <li>
-                        <a href='https://www.dropbox.com/s/8cyw3eiibvqnm4z/Cliff%20House%200.3.app.zip?dl=1' >
+                        <a href='https://www.microsoft.com/store/apps/9P2FR13HXLWS?ocid=badge' target="_blank">
+                            <img alt='Get it from Microsoft'
+                                src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png' />
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://www.dropbox.com/s/2kas64yutzv9lgd/Cliff%20House%201.0.zip?dl=1' >
                             <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
                         </a>
                     </li>
