Added a note for Mac downloads.

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                             </a>
                         </li>
                     </ul>
+                    <p><strong>Mac: </strong>Unzip and ⌘ + click to open.</p>
                 </div>
                 <div class="section-image">
                     <img src="assets/images/visarch/Cliff-House-Mobile.png" alt="Cliff House demo app" />
@@ -221,6 +222,7 @@
                             </a>
                         </li>
                     </ul>
+                    <p><strong>Mac: </strong>Unzip and ⌘ + click to open.</p>
                 </div>
                 <div class="section-image">
                     <p>
