--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </a>
         <div class="wrapper">
             <!--Cliff House-->
-            <div class="section">
+            <div class="section section--downloads">
                 <div class="section-text">
                     <h3>Cliff House</h3>
                     <p>A three-bedroom, two-stories villa at the top of a cliff. </p>
@@ -162,14 +162,19 @@
                         interactive elements and finish configurations, awaiting your virtual visit!.</p>
                     <p>Download this app to experience all the features that we can incorporate on a custom <strong>Show
                             House App</strong></p>
-                    <p><strong>Android app coming soon.</strong></p>
                     <ul class="actions actions--desktop">
                         <li>
                             <a href='https://www.microsoft.com/store/apps/9P2FR13HXLWS?ocid=badge' target="_blank">
                                 <img alt='Get it from Microsoft'
                                     src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png' />
                             </a>
-                        </li>                        
+                        </li>
+                        <li>
+                            <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.showhouseapp.cliffhouse&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
+                                target="_blank">
+                                <img alt='Get it on Google Play' src='./assets/images/google-play.png'/>
+                            </a>
+                        </li>                         
                         <li>
                             <a href='https://www.dropbox.com/s/2kas64yutzv9lgd/Cliff%20House%201.0.zip?dl=1'>
                                 <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
@@ -186,6 +191,12 @@
                         <a href='https://www.microsoft.com/store/apps/9P2FR13HXLWS?ocid=badge' target="_blank">
                             <img alt='Get it from Microsoft'
                                 src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png' />
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.showhouseapp.cliffhouse&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
+                            target="_blank">
+                            <img alt='Get it on Google Play' src='./assets/images/google-play.png'/>
                         </a>
                     </li>
                     <li>
