--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <h3>Cliff House</h3>
                     <p>A three-bedroom, two-stories villa at the top of a cliff. </p>
                     <p>Fictionally situated in South Spain, this villa is a fully furnished house with plenty of
-                        interactive elements and finish configurations, awaiting your virtual visit!.</p>
+                        interactive elements and finish configurations, awaiting your virtual visit!</p>
                     <p>Download this app to experience all the features that we can incorporate on a custom <strong>Show
                             House App</strong></p>
                     <ul class="actions actions--desktop">
