New image for the MS Store badge (qr page).

--- a/qr/qrcard.html
+++ b/qr/qrcard.html
@@ -66,7 +66,7 @@
                         <li>
                             <a href='https://www.microsoft.com/store/apps/9P2FR13HXLWS?ocid=badge' target="_blank">
                                 <img alt='Get it from Microsoft'
-                                    src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png' />
+                                    src='../assets/images/MS-store.png' />
                             </a>
                         </li>
                         <li>
@@ -90,7 +90,7 @@
                     <li>
                         <a href='https://www.microsoft.com/store/apps/9P2FR13HXLWS?ocid=badge' target="_blank">
                             <img alt='Get it from Microsoft'
-                                src='https://assets.windowsphone.com/85864462-9c82-451e-9355-a3d5f874397a/English_get-it-from-MS_InvariantCulture_Default.png' />
+                                src='../assets/images/MS-store.png' />
                         </a>
                     </li>
                     <li>
