Added two projects from Promoalfar.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" />
-    <link  rel="icon"   href="assets/images/favicon.png" type="image/png" />
+    <link rel="icon" href="assets/images/favicon.png" type="image/png" />
 
     <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
     <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -40,7 +40,8 @@
 
                 <p>A virtual <strong>show house</strong> in an app! Make your building or flat into an app from your
                     <strong>BIM</strong> files or <strong>blueprints</strong>, and let your clients and partners explore
-                    it like if they were visiting it.</p>
+                    it like if they were visiting it.
+                </p>
                 <p>Available on mobile platforms, desktop and the web!</p>
             </div>
         </div>
@@ -94,8 +95,10 @@
                 <div class="multiple-image">
                     <div class="section-text">
                         <h3>Realistic lightning, any time of the year</h3>
-                        <p>How does the light incide on that window on summer? How long are shadows in winter? You can set
-                            the date and time to emulate realistic lighting conditions, and even change the speed of time.
+                        <p>How does the light incide on that window on summer? How long are shadows in winter? You can
+                            set
+                            the date and time to emulate realistic lighting conditions, and even change the speed of
+                            time.
                         </p>
                     </div>
                     <div class="section-image">
@@ -150,9 +153,93 @@
         </div>
         <!--Downloads-->
         <a id="Downloads">
-            <h2>Downloads</h2>
+            <h2>Projects and demos</h2>
         </a>
         <div class="wrapper">
+            <!--María Josefa Segovia-->
+            <div class="section section--downloads">
+                <div class="section-text">
+                    <h3>Mar&iacute;a Josefa Segovia</h3>
+                    <p>A seven-apartment building development on sale on Seville, Spain.</p>
+                    <p>The app features a 3D model, a 3D virtual walk, blueprint view, info of the building and a
+                        contact page to reach the real estate agent. This is the first app to feature the <strong>photo mode</strong>, among other interactive features.</p>
+                    <p>App language is Spanish.</p>
+                    <ul class="actions actions--desktop">
+                        <li>
+                            <a href='https://www.microsoft.com/store/apps/9npspm9c4847?ocid=badge' target="_blank">
+                                <img alt='Get it from Microsoft' src='./assets/images/MS-store.png' />
+                            </a>
+                        </li>
+                        <li>
+                            <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.SHA.MariaJosefaSegovia'
+                                target="_blank">
+                                <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="section-image">
+                    <iframe width="480" height="270" src="https://www.youtube.com/embed/RpP4ecmg1Uk"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <ul class="actions actions--mobile">
+                    <li>
+                        <a href='https://www.microsoft.com/store/apps/9npspm9c4847?ocid=badge' target="_blank">
+                            <img alt='Get it from Microsoft' src='./assets/images/MS-store.png' />
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.SHA.MariaJosefaSegovia'
+                            target="_blank">
+                            <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!--Fernández de Guadalupe-->
+            <div class="section section--downloads">
+                <div class="section-text">
+                    <h3>Fern&aacute;ndez de Guadalupe</h3>
+                    <p>A three-apartment building development on sale on Seville, Spain.</p>
+                    <p>The app features a 3D model, a 3D virtual walk, blueprint view, info of the building and a
+                        contact page to reach the real estate agent. This is the first app to feature a <strong>working elevator</strong>, among other features.</p>
+                    <p>App language is Spanish.</p>
+                    <ul class="actions actions--desktop">
+                        <li>
+                            <a href='https://www.microsoft.com/store/apps/9n68231mgd53?ocid=badge' target="_blank">
+                                <img alt='Get it from Microsoft' src='./assets/images/MS-store.png' />
+                            </a>
+                        </li>
+                        <li>
+                            <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.SHA.FdezDeGuadalupe'
+                                target="_blank">
+                                <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="section-image">
+                    <iframe width="480" height="270" src="https://www.youtube.com/embed/UjxMr5pPcy0"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <ul class="actions actions--mobile">
+                    <li>
+                        <a href='https://www.microsoft.com/store/apps/9n68231mgd53?ocid=badge' target="_blank">
+                            <img alt='Get it from Microsoft' src='./assets/images/MS-store.png' />
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.SHA.FdezDeGuadalupe'
+                            target="_blank">
+                            <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <!--Cliff House-->
             <div class="section section--downloads">
                 <div class="section-text">
@@ -165,16 +252,15 @@
                     <ul class="actions actions--desktop">
                         <li>
                             <a href='https://www.microsoft.com/store/apps/9P2FR13HXLWS?ocid=badge' target="_blank">
-                                <img alt='Get it from Microsoft'
-                                    src='./assets/images/MS-store.png' />
+                                <img alt='Get it from Microsoft' src='./assets/images/MS-store.png' />
                             </a>
                         </li>
                         <li>
                             <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.showhouseapp.cliffhouse&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
                                 target="_blank">
-                                <img alt='Get it on Google Play' src='./assets/images/google-play.png'/>
+                                <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
                             </a>
-                        </li>                         
+                        </li>
                         <li>
                             <a href='https://www.dropbox.com/s/2kas64yutzv9lgd/Cliff%20House%201.0.zip?dl=1'>
                                 <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
@@ -189,25 +275,24 @@
                 <ul class="actions actions--mobile">
                     <li>
                         <a href='https://www.microsoft.com/store/apps/9P2FR13HXLWS?ocid=badge' target="_blank">
-                            <img alt='Get it from Microsoft'
-                                src='./assets/images/MS-store.png'/>
+                            <img alt='Get it from Microsoft' src='./assets/images/MS-store.png' />
                         </a>
                     </li>
                     <li>
                         <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.showhouseapp.cliffhouse&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
                             target="_blank">
-                            <img alt='Get it on Google Play' src='./assets/images/google-play.png'/>
+                            <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
                         </a>
                     </li>
                     <li>
-                        <a href='https://www.dropbox.com/s/2kas64yutzv9lgd/Cliff%20House%201.0.zip?dl=1' >
+                        <a href='https://www.dropbox.com/s/2kas64yutzv9lgd/Cliff%20House%201.0.zip?dl=1'>
                             <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
                         </a>
                     </li>
                 </ul>
             </div>
 
-            <!--Vis Arch-->
+            <!--Demo building-->
             <div class="section section--downloads">
                 <div class="section-text">
                     <h3>Demo building</h3>
@@ -217,19 +302,18 @@
                     <ul class="actions actions--desktop">
                         <li>
                             <a href='https://www.microsoft.com/store/apps/9PGFHVLF92WC?ocid=badge' target="_blank">
-                                <img alt='Get it from Microsoft'
-                                    src='./assets/images/MS-store.png' />
+                                <img alt='Get it from Microsoft' src='./assets/images/MS-store.png' />
                             </a>
                         </li>
                         <li>
                             <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.VisArq&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
                                 target="_blank">
-                                <img alt='Get it on Google Play' src='./assets/images/google-play.png'/>
+                                <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
                             </a>
                         </li>
                         <li>
                             <a href='https://www.dropbox.com/s/v9z64g1welsro9g/Vis%20Arch.app.zip?dl=1'>
-                                <img alt='Download for Mac OS X' src='./assets/images/macBtn.png'/>
+                                <img alt='Download for Mac OS X' src='./assets/images/macBtn.png' />
                             </a>
                         </li>
                     </ul>
@@ -245,14 +329,13 @@
                 <ul class="actions actions--mobile">
                     <li>
                         <a href='https://www.microsoft.com/store/apps/9PGFHVLF92WC?ocid=badge' target="_blank">
-                            <img alt='Get it from Microsoft'
-                                src='./assets/images/MS-store.png' />
+                            <img alt='Get it from Microsoft' src='./assets/images/MS-store.png' />
                         </a>
                     </li>
                     <li>
                         <a href='https://play.google.com/store/apps/details?id=com.salvadorjesus.VisArq&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'
                             target="_blank">
-                            <img alt='Get it on Google Play' src='./assets/images/google-play.png'/>
+                            <img alt='Get it on Google Play' src='./assets/images/google-play.png' />
                         </a>
                     </li>
                     <li>
@@ -269,7 +352,8 @@
     <footer>
         <div class="wrapper">
             <h3>Contact us</h3>
-            <p>Every building, home and construction project is different. <br> Reach us so we can discuss your needs and
+            <p>Every building, home and construction project is different. <br> Reach us so we can discuss your needs
+                and
                 tailor the app that suits you best!</p>
             <p><a href="mailto:info@showhouseapp.com"><i class="far fa-envelope"></i> info@showhouseapp.com</a></p>
         </div>
