Added a new section for photo mode.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
             </div>
             <div class="section">
                 <div class="section-text">
+                    <h3>Photo mode</h3>
+                    <p>Enter photo mode to simulate the experience of taking a photo in real life. Move vertically and horizontally, and zoom in to frame the picture before taking your shot.</p>
+                    <p>With Photo Mode you can produce high quality render images for marketing, showcase or sharing in real time.
+                    </p>
+                </div>
+                <div class="section-image">
+                    <video class="" playsinline muted autoplay loop preload="auto">
+                        <source src="assets/videos/PhotoMode.m4v" type="video/mp4">
+                    </video>
+                </div>
+            </div>            
+            <div class="section">
+                <div class="section-text">
                     <h3>Dynamic design</h3>
 
                     <p>Change the materials of any kind of surfaces, open and close doors, change furnitures… Enhance
