--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="section-text">
                     <h3>Photo mode</h3>
                     <p>Enter photo mode to simulate the experience of taking a photo in real life. Move vertically and horizontally, and zoom in to frame the picture before taking your shot.</p>
-                    <p>With Photo Mode you can produce high quality render images for marketing, showcase or sharing in real time.
+                    <p>With Photo Mode you can produce <strong>high quality render images</strong> for marketing, showcase or sharing in real time.
                     </p>
                 </div>
                 <div class="section-image">
