New images for gallery and blueprints with device frames.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <p>Show the best shots and info of your building with the included photo gallery.</p>
                 </div>
                 <div class="section-image">
-                    <img src="assets/images/visarch/Gallery.jpg" alt="Photo gallery" />
+                    <img src="assets/images/visarch/Gallery.png" alt="Photo gallery" />
                 </div>
             </div>
         </div>
