YouTube videos are now responsive.

--- a/index.html
+++ b/index.html
@@ -192,10 +192,12 @@
                     </ul>
                 </div>
                 <div class="section-image">
-                    <iframe width="480" height="270" src="https://www.youtube.com/embed/RpP4ecmg1Uk"
+                    <div class="container-YouTube">
+                        <iframe class="video-YouTube" src="https://www.youtube.com/embed/RpP4ecmg1Uk"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                        allowfullscreen></iframe>                        
+                    </div>
                 </div>
                 <ul class="actions actions--mobile">
                     <li>
@@ -234,10 +236,12 @@
                     </ul>
                 </div>
                 <div class="section-image">
-                    <iframe width="480" height="270" src="https://www.youtube.com/embed/UjxMr5pPcy0"
+                    <div class="container-YouTube">
+                        <iframe class="video-YouTube" src="https://www.youtube.com/embed/UjxMr5pPcy0"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                        allowfullscreen></iframe>                        
+                    </div>                    
                 </div>
                 <ul class="actions actions--mobile">
                     <li>
